Updated manual: urls, files, funding

--- a/urdme/doc/acknowledgment.tex
+++ b/urdme/doc/acknowledgment.tex
@@ -10,7 +10,11 @@ valuable input during the development of URDME.
 The Linnaeus center of excellence UPMARC, Uppsala Programming for
 Multicore Architectures Research Center (PB, SE). U.S.~NIH grant
 R01EB7511, U.S.~DOE award DE-FG02-04ER25621, U.S.~NSF IGERT
-DGE-02-21715, Institute for Collaborative Biotechnologies Grant
-DAAD19-03-D-0004 (BD). The Swedish Graduate School in Mathematics and
-Computing (SE, AH), the Royal Swedish Academy of Sciences scholarship
-FOA08H-109, FOA09H-63, FOA09H-64 (AH), SSF A3 02:124 (AH).
+DGE-02-21715 and grant DMS-1001012, Institute for Collaborative Biotechnologies Grant
+W911NF-09-0001 from the U.S.~Army Research Office (BD), U.S.~ National Institute of Biomedical Imaging And Bioengineering of the National Institute of Health under Award Number R01-EB014877-01 (BD, AH) The Swedish Graduate School in Mathematics and Computing (SE, AH), the Royal Swedish Academy of Sciences scholarship
+FOA08H-109, FOA09H-63, FOA09H-64, SSF A3 02:124 (AH).
+
+The content is solely the responsibility of the authors and does not necessarily
+represent the official views of these agencies.  %required for some funding agencies
+
+
