--- a/urdme/doc/install.tex
+++ b/urdme/doc/install.tex
@@ -40,7 +40,7 @@
 
 \begin{enumerate}
 \item Obtain the latest release of URDME from
-  \url{https://github.com/URDME/urdme}. Download the file {\bf urdme-1.2.tar.gz}. 
+  \url{http://www.urdme.org}. Download the file {\bf urdme-1.2.tar.gz}. 
 \item Unpack the archive. This can be done by running the command
   ``{\bf tar -zxvf urdme-1.2.tar.gz}'' in a terminal. Often it is
   possible to double click the file icon in the operating system's
