--- a/urdme/doc/manual.bib
+++ b/urdme/doc/manual.bib
@@ -75,7 +75,7 @@
 @manual{COMSOL,
         Organization = {Comsol Inc.},
         Title = {Comsol Multiphysics Reference Guide},
-        Edition = {4.3}
+        Edition = {4.3},
         Year = {2012}}
 
 @article{nSSA,
