--- a/urdme/doc/overview.tex
+++ b/urdme/doc/overview.tex
@@ -1,3 +1,4 @@
+% !TEX root = manual.tex
 \section{Code overview}
 \label{sec:ov2}
 
@@ -113,20 +114,28 @@ relevant steps are:
     include & matmodel.h & Functions to serialize data to/from solvers. \\
       &	propensities.h & Definition of the propensity function datatype.	\\
       & report.h     & Header for report.c. \\
+     & read\_matfile.h & Functions to read/write \texttt{.mat} files.\\ 
     & & \\
     msrc  & urdme.m & Gateway routine for the solvers. \\
       & urdme\_startup.m & Initializes URDME. \\
       & urdme\_compile.m & Automatic solver compilation. \\
       & urdme\_validate.m & Input validation. \\
       & urdme2mat.m & Serialize model data for input to solvers.\\
+      & urdme\_addsol.m & Read an output file and add solution to \texttt{umod}\\
+      & & (used when running in background mode).\\
+      & urdme\_inline\_convert.m & Convert "inline" propensities into an ANSI C propensity file.\\
     & & \\
     src & report.c &  Report function used by \varrs. \\ 
+     & matmodel.c & Functions to serialize data to/from solvers.   \\ 
+     & read\_matfile.c & Functions to read/write \texttt{.mat} files.\\ 
     & & \\
     src/nsm & nsm.h & Header for the NSM solver.\\
       & nsm.c & NSM solver interface.\\
       & nsmcore.c & NSM solver computational core. \\
       &	binheap.h & Header for binheap.c.\\
       & binheap.c & The binary heap used in the NSM solver.\\
+    & & \\
+    sbml & sbml2rdme & Translate SBML models into URDME models.\\ 
     & & \\
     examples & (various) & Contains files specifying the example
     studied in detail in Section~\ref{sec:ex}.\\
