Typo in sbml docu

--- a/doc/sbml.tex
+++ b/doc/sbml.tex
@@ -36,7 +36,7 @@ You should obtain the following information:
 \item The script generated a model (.m) and propensity (.c) file with the same filename as the
 SBML specification file (in this case 'mincde'). You can proceed with execution the generated files
 together with geometries imported from Comsol Multiphysics. \\
-\texttt{umod = mphmodel(fem,'mincde')}
+\texttt{umod = urdme(fem,'mincde')}
 
 Asuming the geometry definition to be available in the variable \texttt{fem}.
 
