--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,3 +1,8 @@
+1.2.1
+-----------
+- Removed zlib.h dependency that caused compile failures on certain Linux platforms. 
+- Fixed bug that would cause the PATH variable to overflow after a large number of repeated calls to urdme. 
+
 1.2.0
 ----------
 - Support for Comsol Multiphysics 4.x
