meta info + new startup.m

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,28 @@
+Current maintainer: Stefan Engblom
+stefane@it.uu.se
+www.urdme.org
+
+URDME 1.3
+
+Pavol Bauer
+Stefan Engblom
+
+URDME 1.2
+
+Pavol Bauer
+Brian Drawert
+Stefan Engblom
+Andreas Hellander
+Viktor Gerdin
+
+URDME 1.1
+
+Brian Drawert
+Stefan Engblom
+Andreas Hellander
+
+URDME 1.0
+
 Josef Cullhed
 Stefan Engblom
 Andreas Hellander
-Brian Drawert
-Pavol Bauer
