--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,13 @@
-Current maintainer: Stefan Engblom
+Maintainer: Stefan Engblom
 stefane@it.uu.se
 www.urdme.org
+
+URDME 1.4
+
+Pavol Bauer
+Stefan Engblom
+Aleksandar Senek
+Daniel Wilson
 
 URDME 1.3
 
